--- a/power/src/locales/messages.en.xlf
+++ b/power/src/locales/messages.en.xlf
@@ -235,13 +235,13 @@
         <target> to </target>
       </segment>
     </unit>
-    <unit id="6142088964139089817">
+    <unit id="7808833799378668610">
       <notes>
         <note category="location">src/app/immobilien/immobilien/immobilien.component.html:9</note>
       </notes>
       <segment state="translated">
-        <source> HINWEIS: Das Basisjahr der Indexreihenberechnung richtet sich nach der unteren Auswahl und lässt sich mit den Reglern dynamisch anpassen.</source>
-        <target> NOTE: The base year of the index series calculation depends on the selection below and can be dynamically adjusted using the sliders.</target>
+        <source>HINWEIS: Das Basisjahr der Indexreihenberechnung richtet sich nach der unteren Auswahl und lässt sich mit den Reglern dynamisch anpassen.</source>
+        <target>NOTE: The base year of the index series calculation depends on the selection below and can be dynamically adjusted using the sliders.</target>
       </segment>
     </unit>
     <unit id="3896770541274170506">
@@ -254,14 +254,14 @@
         <target>The</target>
       </segment>
     </unit>
-    <unit id="1619432944706390012">
+    <unit id="2254299917153630149">
       <notes>
-        <note category="description">AGNB</note>
         <note category="location">src/app/immobilien/immobilien/immobilien.component.html:211</note>
+        <note category="description">AGNB</note>
       </notes>
       <segment state="translated">
-        <source> Allgemeinen Geschäfts- und Nutzungsbedingungen (AGNB) </source>
-        <target> general terms and conditions of use (AGNB) </target>
+        <source>Allgemeinen Geschäfts- und Nutzungsbedingungen (AGNB)</source>
+        <target>General Terms of Business and Use (AGNB)</target>
       </segment>
     </unit>
     <unit id="8060976976079359371">
@@ -283,40 +283,40 @@
         <target>Comparisons</target>
       </segment>
     </unit>
-    <unit id="4985767709958335645">
+    <unit id="7847590320561047617">
       <notes>
         <note category="location">src/app/immobilien/immobilien/immobilien.component.html:68</note>
       </notes>
       <segment state="translated">
-        <source> HINWEIS: Eine Auswahl über die Karte ist für die Vergleiche leider nicht möglich.</source>
-        <target> NOTE: A selection via the map is unfortunately not possible for comparisons.</target>
+        <source>HINWEIS: Eine Auswahl über die Karte ist für die Vergleiche leider nicht möglich.</source>
+        <target>NOTE: A selection via the map is unfortunately not possible for comparisons.</target>
       </segment>
     </unit>
-    <unit id="3147918986551624162">
+    <unit id="1819023009432746413">
       <notes>
         <note category="location">src/app/immobilien/immobilien/immobilien.component.html:117</note>
       </notes>
       <segment state="translated">
-        <source> alle auswählen</source>
-        <target> select all</target>
+        <source>alle auswählen</source>
+        <target>select all</target>
       </segment>
     </unit>
-    <unit id="3537524314230510597">
+    <unit id="7269047785736878362">
       <notes>
         <note category="location">src/app/immobilien/immobilien/immobilien.component.html:120</note>
       </notes>
       <segment state="translated">
-        <source> Auswahl aufheben</source>
-        <target> Cancel selection</target>
+        <source>Auswahl aufheben</source>
+        <target>Cancel selection</target>
       </segment>
     </unit>
-    <unit id="535206278987862622">
+    <unit id="821535896692585906">
       <notes>
         <note category="location">src/app/immobilien/immobilien/immobilien.component.html:125</note>
       </notes>
       <segment state="translated">
-        <source> alle/keine auswählen</source>
-        <target> select all/none</target>
+        <source>alle/keine auswählen</source>
+        <target>select all/none</target>
       </segment>
     </unit>
     <unit id="3527049829860901630">
@@ -2937,7 +2937,7 @@ This can not be reversed!</target>
     </unit>
     <unit id="6622873968841840307">
       <notes>
-        <note category="location">src/app/fragebogen/editor/formular-settings/formular-settings.component.ts:44</note>
+        <note category="location">src/app/fragebogen/editor/question-settings/question-settings.component.ts:55</note>
       </notes>
       <segment state="translated">
         <source>Änderungen übernommen</source>
@@ -2946,7 +2946,7 @@ This can not be reversed!</target>
     </unit>
     <unit id="573391330390490773">
       <notes>
-        <note category="location">src/app/fragebogen/editor/formular-settings/formular-settings.component.ts:45</note>
+        <note category="location">src/app/fragebogen/editor/question-settings/question-settings.component.ts:56</note>
       </notes>
       <segment state="translated">
         <source>Ihre Änderungen wurden erfolgreich zwischen gespeichert.</source>
@@ -2964,7 +2964,7 @@ This can not be reversed!</target>
     </unit>
     <unit id="932876642658778900">
       <notes>
-        <note category="location">src/app/fragebogen/editor/formular-settings/formular-settings.component.html:576</note>
+        <note category="location">src/app/fragebogen/editor/question-settings/question-settings.component.html:770</note>
       </notes>
       <segment state="translated">
         <source>Änderungen speichern</source>
@@ -3135,7 +3135,7 @@ This can not be reversed!</target>
     </unit>
     <unit id="2258060347097525516">
       <notes>
-        <note category="location">src/app/fragebogen/editor/formular-settings/formular-settings.component.html:10</note>
+        <note category="location">src/app/fragebogen/editor/question-settings/question-settings.component.html:10</note>
       </notes>
       <segment state="translated">
         <source>Allgemein</source>
@@ -3207,7 +3207,7 @@ This can not be reversed!</target>
     </unit>
     <unit id="2465969235242735880">
       <notes>
-        <note category="location">src/app/fragebogen/editor/formular-settings/formular-settings.component.html:445</note>
+        <note category="location">src/app/fragebogen/editor/question-settings/question-settings.component.html:128</note>
       </notes>
       <segment state="translated">
         <source>Sichtbar</source>
@@ -3225,7 +3225,7 @@ This can not be reversed!</target>
     </unit>
     <unit id="5564872229726777752">
       <notes>
-        <note category="location">src/app/fragebogen/editor/formular-settings/formular-settings.component.html:461</note>
+        <note category="location">src/app/fragebogen/editor/question-settings/question-settings.component.html:144</note>
       </notes>
       <segment state="translated">
         <source>Deaktiviert</source>
@@ -3801,7 +3801,7 @@ This can not be reversed!</target>
     </unit>
     <unit id="276184332300045619">
       <notes>
-        <note category="location">src/app/fragebogen/editor/formular-settings/formular-settings.component.html:98</note>
+        <note category="location">src/app/fragebogen/editor/question-settings/question-settings.component.html:496</note>
       </notes>
       <segment state="translated">
         <source>Wie definiert</source>
@@ -3810,7 +3810,7 @@ This can not be reversed!</target>
     </unit>
     <unit id="5748078469472297200">
       <notes>
-        <note category="location">src/app/fragebogen/editor/formular-settings/formular-settings.component.html:100</note>
+        <note category="location">src/app/fragebogen/editor/question-settings/question-settings.component.html:498</note>
       </notes>
       <segment state="translated">
         <source>Zufällig</source>
@@ -3990,7 +3990,7 @@ This can not be reversed!</target>
     </unit>
     <unit id="7096759547174459513">
       <notes>
-        <note category="location">src/app/fragebogen/editor/formular-settings/formular-settings.component.html:177</note>
+        <note category="location">src/app/fragebogen/editor/question-settings/question-settings.component.html:606</note>
       </notes>
       <segment state="translated">
         <source>Breite in Pixel</source>
@@ -3999,7 +3999,7 @@ This can not be reversed!</target>
     </unit>
     <unit id="6463726515236192057">
       <notes>
-        <note category="location">src/app/fragebogen/editor/formular-settings/formular-settings.component.html:190</note>
+        <note category="location">src/app/fragebogen/editor/question-settings/question-settings.component.html:619</note>
       </notes>
       <segment state="translated">
         <source>Höhe in Pixel</source>
@@ -4008,7 +4008,7 @@ This can not be reversed!</target>
     </unit>
     <unit id="3681264497760339705">
       <notes>
-        <note category="location">src/app/fragebogen/editor/formular-settings/formular-settings.component.html:203</note>
+        <note category="location">src/app/fragebogen/editor/question-settings/question-settings.component.html:632</note>
       </notes>
       <segment state="translated">
         <source>Größenanpassung</source>
@@ -4017,7 +4017,7 @@ This can not be reversed!</target>
     </unit>
     <unit id="4728532590739893418">
       <notes>
-        <note category="location">src/app/fragebogen/editor/formular-settings/formular-settings.component.html:209</note>
+        <note category="location">src/app/fragebogen/editor/question-settings/question-settings.component.html:638</note>
       </notes>
       <segment state="translated">
         <source>Keine Anpassung</source>
@@ -4026,7 +4026,7 @@ This can not be reversed!</target>
     </unit>
     <unit id="4710626519203410106">
       <notes>
-        <note category="location">src/app/fragebogen/editor/formular-settings/formular-settings.component.html:211</note>
+        <note category="location">src/app/fragebogen/editor/question-settings/question-settings.component.html:640</note>
       </notes>
       <segment state="translated">
         <source>Verkleinern</source>
@@ -4035,7 +4035,7 @@ This can not be reversed!</target>
     </unit>
     <unit id="7766735261673100646">
       <notes>
-        <note category="location">src/app/fragebogen/editor/formular-settings/formular-settings.component.html:213</note>
+        <note category="location">src/app/fragebogen/editor/question-settings/question-settings.component.html:642</note>
       </notes>
       <segment state="translated">
         <source>Abschneiden</source>
@@ -4044,7 +4044,7 @@ This can not be reversed!</target>
     </unit>
     <unit id="2067326968798044785">
       <notes>
-        <note category="location">src/app/fragebogen/editor/formular-settings/formular-settings.component.html:215</note>
+        <note category="location">src/app/fragebogen/editor/question-settings/question-settings.component.html:644</note>
       </notes>
       <segment state="translated">
         <source>Füllen</source>
@@ -4872,7 +4872,7 @@ This can not be reversed!</target>
     </unit>
     <unit id="8852250703686567498">
       <notes>
-        <note category="location">src/app/fragebogen/editor/formular-settings/formular-settings.component.ts:54</note>
+        <note category="location">src/app/fragebogen/editor/question-settings/question-settings.component.ts:67</note>
       </notes>
       <segment state="translated">
         <source>Ungültige Einstellungen</source>
@@ -4881,7 +4881,7 @@ This can not be reversed!</target>
     </unit>
     <unit id="6908314331075628072">
       <notes>
-        <note category="location">src/app/fragebogen/editor/formular-settings/formular-settings.component.ts:54</note>
+        <note category="location">src/app/fragebogen/editor/question-settings/question-settings.component.ts:67</note>
       </notes>
       <segment state="translated">
         <source>Bitte prüfen Sie Ihre Eingaben.</source>
@@ -5070,7 +5070,7 @@ This can not be reversed!</target>
     </unit>
     <unit id="2877409751096310292">
       <notes>
-        <note category="location">src/app/fragebogen/dashboard/newform/newform.component.ts:44</note>
+        <note category="location">src/app/fragebogen/dashboard/dashboard.component.html:494</note>
       </notes>
       <segment state="translated">
         <source>Neues Formular</source>
